--- a/WebApiSample/WebApiSample/ConnectionStrings.config.example
+++ b/WebApiSample/WebApiSample/ConnectionStrings.config.example
@@ -1,5 +1,5 @@
 ﻿<connectionStrings>
   <add name="WebApiSampleContext"
       providerName="System.Data.SqlClient"
-      connectionString="Data Source=xxx.example.net;Initial Catalog=CrudExampleDb;Persist Security Info=True;User ID=kiewic;Password=XXX"/>
+      connectionString="Data Source=xxx.example.net;Initial Catalog=CrudExampleDb;Persist Security Info=True;User ID=hongpt;Password=XXX"/>
 </connectionStrings>
